# javaMdktCompiler.py

./: .gitignore  .gitlab-ci.yml  .gitmodules  ReadMe.md  pyproject.toml
javaMdktCompiler/: __init__.py
tests/: Test.java  originalTests.py  tests.py
