[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "javaMdktCompiler"
authors = [{name = "KOLANICH"}]
description = "Just python bindings for `org.mdkt.compiler` Java lib allowing to compile and load Java sources in runtime."
keywords = ["compile", "java", "JVM"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dependencies = [
	"JAbs", # @ git+https://codeberg.org/KOLANICH-libs/JAbs.py
]
dynamic = ["version"]

[project.readme]
file = "ReadMe.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://codeberg.org/UniGrammar/javaMdktCompiler.py"

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
